@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2005-11-17 18:35:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-27
+
+    Summary:
+      web, start to implement the access log
+    Revision:
+      itools--main--0.12--patch-27
+
+
+    modified files:
+     Changelog scripts/icms.py web/request.py web/server.py
+
+
 2005-11-17 17:39:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-26
 
     Summary:
